2011-01-15  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-icc.c (icc_handle_data): Bug fix: add break for case
	ICC_STATE_SEND.

2011-01-14  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.6.

	* src/usb_prop.c (gnukStringSerial): Include version number (again).

	* boards/STM8S_DISCOVERY/board.c (hwinit1): Initialize TIM3 and
	remap TIM3.
	(cir_ext_disable, cir_ext_enable, EXTI9_5_IRQHandler)
	(TIM3_IRQHandler): New.

	* boards/STBEE_MINI/board.h (HAVE_7SEGLED): New.

	* boards/STM8S_DISCOVERY/board.h: Include "config.h".
	(VAL_GPIOBODR): PB0 (TIM3_CH3) is pull-down for PINPAD_SUPPORT.

	* src/pin-cir.c (pindisp): Handle the board with no 7 segment
	display.

2011-01-11  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (do_openpgpcard_aid): Fix length of res_p;

2011-01-08  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-icc.c (icc_handle_data): Handle the case of
	ICC_STATE_SEND (back again to the implementation of v0.4).
	(USBthread): Don't send back larger block (for libccid 1.3.11).

2011-01-07  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_read_binary): Call gpg_do_get_data for AID.

	* src/openpgp-do.c (gpg_do_get_data): Added new argument WITH_TAG.

	* src/usb_prop.c (gnuk_device_init)
	(gnuk_device_GetStringDescriptor): gnukStringSerial with unique
	chip ID.

	* src/openpgp-do.c (do_openpgpcard_aid): New.
	(openpgpcard_aid): Removed.

	* boards/common/hw_config.c (unique_device_id): New.

2011-01-06  NIIBE Yutaka  <gniibe@fsij.org>

	* src/config.h.in (PINPAD_MORE_DEFINE): Added.

	* src/configure: Requiring bash (for variable substitution), added
	PINPAD.

	* src/Makefile.in: Support PINPAD.

	* src/pin-cir.c (cir_timer_interrupt): Support Sharp protocol.

2011-01-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/chconf.h (CH_USE_DYNAMIC): It's TRUE now.

	* src/usb_desc.c (gnukConfigDescriptor): Added PINPAD_SUPPORT.

	* src/pin-cir.c (cir_timer_interrupt): Added CIR_PERIOD_INHIBIT_CHATTER.

2010-12-29  NIIBE Yutaka  <gniibe@fsij.org>
